# rustybot

./: .gitignore  Cargo.toml  README.md  avr-atmega328p.json  pinout.md  rustfmt.toml  uno-runner.sh
.cargo/: config.toml
src/: main.rs  mem.rs  motor.rs  qtsensor.rs  state_machine.rs  timers.rs  util.rs  zumo_sensors.rs
src/avr_async/: driver.rs  executor.rs  mod.rs  waiter.rs  waker.rs
src/state_machine/: boundary_detected_state.rs  calibration_state.rs  exploration_state.rs  initialization_state.rs  mod.rs  rotation_state.rs
src/uno/: eeprom.rs  imu.rs  ir_sensors.rs  led.rs  mod.rs  motor.rs  pushbutton.rs  timers.rs  zumo_sensors.rs
src/util/: constvec.rs  minarray.rs  mod.rs
