[package]
name = "rustybot"
version = "0.1.0"
authors = ["David R. Morrison <drmorr@evokewonder.com>"]
edition = "2018"

[dependencies]
embedded-hal = "0.2.4"
micromath = "1.0.1"
nb = "0.1.1"
ufmt = "0.1.0"

[dependencies.minarray]
git = "https://github.com/drmorr0/minarray"

[dependencies.void]
version = "1"
default-features = false

[dependencies.arduino-uno]
git = "https://github.com/Rahix/avr-hal"
rev = "a202778"

[dependencies.avr-hal-generic]
git = "https://github.com/Rahix/avr-hal"
rev = "a202778"

# Configure the build for minimal size
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
